--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "gulp",
     "start": "node index.js",
     "debug": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +19,9 @@
     "mongoose": "^5.4.3",
     "pug": "^2.0.3",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.0",
+    "gulp-sass": "^4.0.2"
   }
 }
