--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
+    "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-csso": "^3.0.1",
     "gulp-sass": "^4.0.2"
