--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "gulp",
     "postinstall": "npm run build",
     "start": "node index.js",
-    "debug": "nodemon index.js",
+    "debug": "concurrently --kill-others \"gulp dev\" \"nodemon index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-csso": "^3.0.1",
