--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.3",
+    "morgan": "^1.9.1",
     "pug": "^2.0.3",
     "socket.io": "^2.2.0"
   },
