--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.3",
     "morgan": "^1.9.1",
     "pug": "^2.0.3",
